@@ -1,3 +1,4 @@
+- added option to restart level (2021/04/03 MS)
 - adjusted Kids difficulty (2021/04/03 MS)
 
 1.0.6:
